- Fixed checkin Kiosk manager current count alignment

--- a/RockWeb/Styles/_checkin-core.less
+++ b/RockWeb/Styles/_checkin-core.less
@@ -652,7 +652,6 @@ input.namesearch {
   }
 
   .kioskmanager-count-locations > li {
-    float: left;
     margin-right: 12px;
   }
 
